ui/src/app/views/signed-in/component.css
.header-image {
  height: 57px;
  width: 155px;
  margin-left: 1rem;
}

.header-image:hover {
  cursor: pointer;
}

.header-image:focus {
  outline: none;
}

.header-container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.sidenav-toggle {
  transform: rotate(0deg);
  display: inline-block;
  margin-left: 1rem;
  transition: transform 0.5s;
}
.sidenav-toggle.rotate {
  transform: rotate(90deg);
}
.sidenav-toggle:hover {
  cursor: pointer;
}

.page-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-shadow: 3px 0px 10px;
  padding-top: 1rem;
  padding-bottom: 0.5rem;
  background-color: white;
  /*
   * NOTE: if you ever need to change this number, you need to ALSO change the
   * min-height calc in .content-container or we'll wind up with a container
   * that is either too short or so tall it creates a scrollbar
   */
  height: 4rem;
}

.nav-link:hover {
  transition: box-shadow 0.05s ease-in;
}

.sidenav .sidenav-content > .nav-link {
  margin: 0;
  padding: 0.5rem 1.5rem;
  text-align: left;
}

.image-link-wrapper {
  text-decoration: none;
}

.content-container {
  display: flex;
  /*View height minus top bar.*/
  min-height: calc(100vh - 4rem);
}

.sidenav {
  background-color: #262262;
  position: absolute;
  top: 4rem;
  bottom: 0;
  z-index: 1500;
  flex-grow: 1;
  width: 10rem;
  box-shadow: 0px 3px 10px;
  opacity: 1;
  transition: opacity 0.5s;
}

.sidenav.sidenavHidden {
  z-index: -1;
  opacity: 0;
}

.btn.btn-primary.nav-link {
  text-transform: none;
  border-radius: 0;
  height: 2rem;
  color: #aeb2b7;
}

.btn.btn-primary.nav-link.active {
  background-color: #4356a7;
  color: #f1f2f2;
  font-weight: bold;
}

.btn.btn-primary.nav-link:hover {
  color: #f1f2f2;
}

.app-container {
  width: 100%;
  padding-right: 0.6rem;
  padding-left: 1rem;
  flex-grow: 1;
}

button.btn:focus {
  outline: none;
}

a.btn.btn-primary.nav-link {
  line-height: 1rem;
}

.btn.btn-secondary.btn-bug-report {
  color: #979797;
  border: 1px solid #979797;
  border-radius: 5px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.26), 0 2px 10px 0 rgba(0,0,0,0.16);
  height: 2rem;
  width: 6rem;
  align-self: center;
  margin-top: 6rem;
  margin-left: calc(50% - 3rem);
  margin-right: calc(50% - 3rem);
}

.background-image {
  background-image: url('/assets/images/hex-background@2x.png');
  background-repeat: no-repeat;
  z-index: -1;
  background-size: cover;
  right: 0rem;
  top: 3.3rem;
  width: 50%;
  position: absolute;
  height: calc(100vh - 3.3rem);
}

